Eclipse 3.6 Platform and BIRT 2.6 Migration
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@18027 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/person/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/person/resource/messages_de.properties
@@ -2,3 +2,57 @@ org.nightlabs.jfire.person.PersonStruct.NameValidationError=Sie müssen Name und 
 org.nightlabs.jfire.person.PersonStruct.SalutationNeededValidationError=Sie müssen eine Anrede auswählen.
 org.nightlabs.jfire.person.PersonStruct.SalutationNotNeededValidationError=Sie haben eine Anrede ausgewählt aber keinen Namen.
 org.nightlabs.jfire.person.PersonStruct.EmailValidationWarning=Sie haben eine ungültige E-Mail-Adresse angegeben.
+
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/PersonalData].name = Persönliche Daten
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/Company].name = Firma
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/Name].name = Name
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/FirstName].name = Vorname
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/Salutation].name = Anrede
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/PersonalData/dev.jfire.org/Salutation/Mister].name = Herr
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/PersonalData/dev.jfire.org/Salutation/Mistress].name = Frau
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/Title].name = Titel
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/DateOfBirth].name = Geburtsdatum
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PersonalData/dev.jfire.org/Photo].name = Bild
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/PostAddress].name = Anschrift
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PostAddress/dev.jfire.org/Address].name = Adresse
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PostAddress/dev.jfire.org/PostCode].name = Postleitzahl
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PostAddress/dev.jfire.org/City].name = Stadt
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PostAddress/dev.jfire.org/Region].name = Region
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/PostAddress/dev.jfire.org/Country].name = Land
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/Phone].name = Telefon
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/Phone/dev.jfire.org/PrimaryPhone].name = Telefon
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/Phone/dev.jfire.org/Fax].name = Fax
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/Internet].name = Internet
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/Internet/dev.jfire.org/EMail].name = EMail
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/Internet/dev.jfire.org/Homepage].name = Homepage
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/BankData].name = Bankdaten
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/AccountHolder].name = Kontoinhaber
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/AccountNumber].name = Kontonummer
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/BankCode].name = Bankleitzahl
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/BankName].name = Bank
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/BIC].name = Internationale Bankleitzahl BIC
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/BankData/dev.jfire.org/IBAN].name = Internationale Kontonummer IBAN
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/GovernmentalData].name = Staatliche Daten
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/GovernmentalData/dev.jfire.org/VATIN].name = USt-IdNr.
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/GovernmentalData/dev.jfire.org/NationalTaxNumber].name = Nationale Steuernummer
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/GovernmentalData/dev.jfire.org/TradeRegisterName].name = Handelsregister-Name
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/GovernmentalData/dev.jfire.org/TradeRegisterNumber].name = Handelsregister-Nummer
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/CreditCard].name = Kreditkarte
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/CreditCard/dev.jfire.org/CreditCardHolder].name = Karteninhaber
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/CreditCard/dev.jfire.org/Number].name = Kreditkartennummer
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryYear].name = Gültigkeit Jahr
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth].name = Gültigkeit Monat
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/01].name = 01 - Januar
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/02].name = 02 - Februar
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/03].name = 03 - März
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/04].name = 04 - April
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/05].name = 05 - Mai
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/06].name = 06 - Juni
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/07].name = 07 - Juli
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/08].name = 08 - August
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/09].name = 09 - September
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/10].name = 10 - Oktober
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/11].name = 11 - November
+org.nightlabs.jfire.prop.structfield.StructFieldValue[dev.jfire.org/CreditCard/dev.jfire.org/ExpiryMonth/12].name = 12 - Dezember
+org.nightlabs.jfire.prop.StructBlock[dev.jfire.org/Comment].name = Kommentar
+org.nightlabs.jfire.prop.StructField[dev.jfire.org/Comment/dev.jfire.org/Comment].name = Kommentar
